move oas to spec & add api articles, categories
